# clawde

./: .gitignore  README.ko.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-04-v02-percussive-detection-design.md  2026-04-04-v03-source-separation-design.md
src/clawde/: __init__.py  arranger.py  audio.py  cli.py  mapper.py  percussive.py  pipeline.py  refiner.py  rhythm.py  separator.py  server.py  tab_ascii.py  tab_gp.py  transcriber.py
tests/: test_arranger.py  test_mapper.py  test_percussive.py  test_refiner.py  test_rhythm.py  test_separator.py  test_tab_ascii.py  test_tab_gp.py
